[package]
name = "rust-libp2p-relay"
version = "0.1.0"
edition = "2021"
description = "A libp2p relay implementation in Rust"
license = "MIT" # Or your preferred license

[dependencies]
libp2p = { version = "0.53", features = ["tokio", "tcp", "identify", "ping", "relay", "macros", "noise", "yamux"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
env_logger = "0.11"
log = "0.4"
clap = { version = "4", features = ["derive"] } # For command-line argument parsing later
