[package]
name = "rust-libp2p-relay"
version = "0.1.0"
edition = "2021"
description = "A libp2p relay implementation in Rust"
license = "MIT" # Or your preferred license

[dependencies]
libp2p = { version = "0.55", features = ["tokio", "tcp", "identify", "ping", "relay", "macros", "noise", "yamux", "dns", "websocket", "gossipsub"] } # Added dns and websocket features
libp2p-websocket = { version = "0.45" } # Removed non-existent "tokio" feature
tokio = { version = "1", features = ["full"] }
futures = "0.3"
dotenvy = "0.15" # Added dotenvy for .env file support
base64 = "0.22" # Added base64 for decoding private key
env_logger = "0.11"
log = "0.4"
clap = { version = "4", features = ["derive"] } # For command-line argument parsing later
warp = "0.3" # Added warp for the web server
serde = { version = "1.0", features = ["derive"] } # Added serde for JSON serialization
serde_json = "1.0" # Added serde_json
parking_lot = "0.12" # Added for Mutex, often preferred with async
