[package]
name = "rust-libp2p-relay"
version = "0.1.0"
edition = "2021"
description = "A libp2p relay implementation in Rust"
license = "MIT" # Or your preferred license

[dependencies]
libp2p = { version = "0.55", features = [
    "tokio", "tcp", "identify", "ping", "relay", "macros", "noise", "yamux", "dns", "websocket", "gossipsub", "autonat", "dcutr",
    "quic"
] } # Base libp2p features
libp2p-websocket = { version = "0.45" } # Removed non-existent "tokio" feature
tokio = { version = "1", features = ["full"] }
futures = "0.3"
dotenvy = "0.15" # Added dotenvy for .env file support
base64 = "0.22" # Added base64 for decoding private key
env_logger = "0.11"
log = "0.4"
clap = { version = "4", features = ["derive"] } # For command-line argument parsing later
warp = "0.3" # Added warp for the web server
serde = { version = "1.0", features = ["derive"] } # Added serde for JSON serialization
serde_json = "1.0" # Added serde_json
parking_lot = "0.12" # Added for Mutex, often preferred with async
bytes = "1" # Added bytes crate dependency for prost
rand = "0.8" # Add rand for generating certificates and random values
lazy_static = "1.4.0" # For pre-calculating topic hashes

# Add prost for protobuf handling
prost = "0.13"

# Add new dependencies
libp2p-webrtc = { version = "0.9.0-alpha", features = ["tokio"] }
libp2p-webtransport-websys = "0.5"
libp2p-autonat = "0.11"
libp2p-dcutr = "0.12"
rustls = "0.23.26"
libp2p-mplex = "0.41" # Added Mplex for multiplexer compatibility

# Patch libp2p-identify to increase message size limit
[patch.crates-io]
libp2p-identify = { path = "./patches/libp2p-identify" }

[build-dependencies]
# Add build dependency for prost
prost-build = "0.13"

[dev-dependencies]
ed25519-dalek = "2.1.1" # For generating test keys
rand = "0.8.5"          # For generating test keys
prost-types = "0.13" # Add prost-types for test encoding
serial_test = "3.1.1"   # For running environment-modifying tests serially
